# points-of-interest

./: .gitignore  README.md  SQL.sql  docker-compose.yml  pyproject.toml
app/: main.py
app/database/: criar_tabela.py  pgsql.py
app/frontend/: index.html  script.js  style.css
app/models/: point.py
app/schemas/: poi_schema.py
app/services/: finder.py
tests/: test_endpoints.py  test_models.py  test_schemas.py  test_services.py
